fixed scrollbar in contact.html

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -90,7 +90,6 @@
     display: flex;
     flex-direction: column;
     height: 360px;
-    width: 660px;
     animation: slightDetailsFromRightToCenter 800ms forwards; 
 }
 
